# scholar-agent

./: .gitignore  .isort.cfg  CODEOWNERS  README.md  pyproject.toml  scholar_langgraph.py  scholar_multiagent.py
.continue/rules/: project.md
crewai/scholar/: README.md  output.json
crewai/scholar/src/scholar/: crew.py  main.py
crewai/scholar/src/scholar/config/: config.yaml
crewai/scholar/src/scholar/tools/: custom_tool.py
langflow/: Scholar Agent.json
notes/: .prompting.md  notes.md  rubric.md  state-graph.yaml
rigid/: .coveragerc
rigid/src/scholar_agent/utils/: auto_fastapi.py
scholar/src/scholar/: crew.py
scholar/src/scholar/config/: agents.yaml  config.yaml  mcp.yaml  tasks.yaml  tools.yaml
scholar/src/scholar/tools/: multi_mcp_adapter.py
scratch/crewai/scholar/: output.json  pyproject.toml
scratch/crewai/scholar/src/scholar/: crew.py
scratch/crewai/scholar/src/scholar/config/: config.yaml
scripts/: lint.sh  run_tests.sh
src/scholar_agent/: __main__.py  scholar.py  server.py  types.py
src/scholar_agent/config/: __init__.py  config.yaml
src/scholar_agent/utils/: factory.py  models.py
tests/utils/: test_factory.py
