[project]
name = "scholar"
version = "0.1.0"
description = "scholar using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai-tools[mcp]>=0.65.0",
    "crewai[tools]>=0.175.0,<1.0.0",
]

[project.scripts]
scholar = "scholar.main:run"
run_crew = "scholar.main:run"
train = "scholar.main:train"
replay = "scholar.main:replay"
test = "scholar.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
